src/test/ui/impl-trait/issue-55872-2.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-55872-2.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0277]: the trait bound `impl Future: Copy` is not satisfied
  --> $DIR/issue-55872-2.rs:16:14
   |
LL |     type E = impl std::marker::Copy;
   |              ^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `impl Future`

error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872-2.rs:18:28
   |
LL |       fn foo<T>() -> Self::E {
   |  ____________________________^
LL | |
LL | |         async {}
LL | |     }
   | |_____^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
